--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "predeploy": "vite build"
   },
   "dependencies": {
     "hiding-header-react": "^0.6.6",
