--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "practice",
   "private": true,
-  "homepage": "https://github.com/YOOBAMAWHEREISMYCLOTHES/my_portfolio/",
+  "homepage": "https://yoobamawhereismyclothes.github.io/my_portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
