--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "practice",
   "private": true,
-  "homepage": "https://yoobamawhereismyclothes.github.io/my_portfolio/",
+  "homepage": "https://YOOBAMAWHEREISMYCLOTHES.github.io/my_portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "vite": "^4.3.2"
   }
 }
